[project]
name = "commons-clipper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "loguru>=0.7.3",
    "project-paths>=1.1.1",
    "ratelimit>=2.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "ruff>=0.14.6",
]

[tool.project-paths]
clips = "./clips"
